--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@panzoom/panzoom": "^4.6.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
+    "ngx-image-cropper": "^7.0.2",
     "orgchart": "^5.0.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.8",
